<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/Filters"
        android:icon="@drawable/ic_filter_icon"
        android:title="@string/menuFilterTitle"
        app:showAsAction="ifRoom" >
        <menu>
            <item android:id="@+id/AllFilter"
                android:title="@string/menuFilterAllNotes" />
            <item android:id="@+id/MarketFiler"
                android:title="@string/menuFilterOnlyMarket" />
            <item android:id="@+id/FinanceFilter"
                android:title="@string/menuFilterOnlyFinance" />
            <item android:id="@+id/PersonalFilter"
                android:title="@string/menuFilterOnlyPersonal" />
        </menu>
    </item>


</menu>